# snake-game

./: CMakeLists.txt  README.md
GAMES/: Snake_GUI  Snake_Term  Tetris_GUI  Tetris_TERM
GAMES/Snake_Term.dSYM/Contents/: Info.plist
GAMES/Snake_Term.dSYM/Contents/Resources/DWARF/: Snake_Term
GAMES/Snake_Term.dSYM/Contents/Resources/Relocations/aarch64/: Snake_Term.yml
GAMES/Tetris_TERM.dSYM/Contents/: Info.plist
GAMES/Tetris_TERM.dSYM/Contents/Resources/DWARF/: Tetris_TERM
GAMES/Tetris_TERM.dSYM/Contents/Resources/Relocations/aarch64/: Tetris_TERM.yml
src/: Doxyfile  Makefile
src/brick_game/snake/: main.cpp  snake_model.cpp  snake_model.h
src/brick_game/tetris/: main.c  tetris.c  tetris.h
src/controller/: snake_controller.h
src/gui/cli/: cli.c  cli.h  snake_cli.cpp  snake_cli.h
src/gui/desktop/snake/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  snake_segment.h
src/gui/desktop/tetris/: CMakeLists.txt  main.cpp  mainwindowtetris.cpp  mainwindowtetris.h  mainwindowtetris.ui  tetris_painter.h
src/tests/: snake_test.cpp
